examples/kubernetes-grpc/cc-door-app.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: cc-door-mgr
    zgroup: grpcExample
  name: cc-door-mgr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cc-door-mgr
  template:
    metadata:
      labels:
        app: cc-door-mgr
        zgroup: grpcExample
    spec:
      containers:
      - name: cc-door-mgr
        image: cilium/cc-grpc-demo
        command: ["python3"]
        args: ["/cloudcity/cc_door_server.py"]
        ports:
        - containerPort: 50051
          name:          grpc
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: cc-door-server
    zgroup: grpcExample
  name: cc-door-server
spec:
  ports:
  - port: 50051
    protocol: TCP
    targetPort: 50051
  selector:
    app: cc-door-mgr
  sessionAffinity: None
  type: ClusterIP
---
apiVersion: v1
kind: Pod
metadata:
  labels:
    app: public-terminal
    zgroup: grpcExample
  name: terminal-87
spec:
  containers:
  - name: cc-door-client
    image: cilium/cc-grpc-demo
    command: ["sleep"]
    args: ["300000"]
